--- a/src/app/dash-overview/dash-overview.component.html
+++ b/src/app/dash-overview/dash-overview.component.html
@@ -1,3 +1,8 @@
+<div class="example-label">
+<!-- <a mat-raised-button href= "/usercreation">Create User</a>   -->
+<button mat-raised-button [routerLink]="['/usercreation']">Create User</button>
+ </div>
+ 
  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- S.No Column -->
