--- a/src/app/qualityassurance/qualityassurance.component.css
+++ b/src/app/qualityassurance/qualityassurance.component.css
@@ -1,4 +1,11 @@
-table {
+/* .table {
     width: 100%;
     margin: 5%;
-  }
+  } */
+.mat-elevation-z8{
+  margin-top: 150px;
+}
+
+.mat-header-row {
+  background-color: blue;
+}
