--- a/src/app/readings/readings.component.css
+++ b/src/app/readings/readings.component.css
@@ -2,3 +2,11 @@ table {
     width: 100%;
     margin: 5%;
   }
+
+  .mat-elevation-z8{
+    margin-top:150px;
+  }
+
+  .mat-header-row{
+    background-color: #0d7bb9;
+  }
