--- a/src/app/transferstatus/transferstatus.component.css
+++ b/src/app/transferstatus/transferstatus.component.css
@@ -2,3 +2,9 @@ table {
     width: 100%;
     margin: 5%;
   }
+  .mat-elevation-z8{
+    margin-top: 10%;
+  }
+  .mat-header-row{
+    background-color: #0d7bb9;
+  }
