--- a/src/app/usercreation/usercreation.component.css
+++ b/src/app/usercreation/usercreation.component.css
@@ -3,4 +3,13 @@
     width: 100%;
     margin: 5%;
     padding-right: 50px;
+
   }
+  .main-content{
+    margin-left: 150px;
+  }
+
+  .mat-header-row{
+    background-color: #0d7bb9;
+  }
+  
