--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="logo-img">
             
         </div>
-        Ressinance
+        Auto Sync
     </a>
 </div>
 <div class="sidebar-wrapper">
