--- a/src/app/qualityassurance/qualityassurance.component.css
+++ b/src/app/qualityassurance/qualityassurance.component.css
@@ -1,7 +1,8 @@
-/* .table {
+.table {
     width: 100%;
     margin: 5%;
-  } */
+    margin-left: 10%;
+  }
 .mat-elevation-z8{
   margin-top: 150px;
 }
