--- a/src/assets/scss/core/_angular-modal.scss
+++ b/src/assets/scss/core/_angular-modal.scss
@@ -52,7 +52,7 @@
         a.modal-button{
             display: inline-block;
             padding: 20px 15px;
-            background-color: #fdfdfd;
+            background-color: white;
             font-size: 14px;
             text-align: center;
             color: inherit;
