--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -1,3 +1,6 @@
+<div class="col-lg-12">
+  
+
 <div style="padding:5%">
   <mat-form-field>
     <input
@@ -51,6 +54,9 @@
     [pageSize]="3"
     [pageSizeOptions]="[5, 10, 25, 100]"
   ></mat-paginator>
+  </div>
+
+
 
   <!-- <mat-form-field>
     <input
