--- a/src/assets/scss/core/_navbar.scss
+++ b/src/assets/scss/core/_navbar.scss
@@ -12,7 +12,7 @@
     .navbar-nav{
         .nav-item .nav-link{
             position: relative;
-            color: inherit;
+            color: lightcoral;
             padding: $padding-general-x;
             font-weight: $font-weight-default;
             font-size: $mdb-btn-font-size-base;
