--- a/src/app/dash-overview/dash-overview.component.html
+++ b/src/app/dash-overview/dash-overview.component.html
@@ -1,3 +1,4 @@
+<div class="col-lg-12">
 <div class="example-label">
 <!-- <a mat-raised-button href= "/usercreation">Create User</a>   -->
 <button mat-raised-button [routerLink]="['/usercreation']">Create User</button>
@@ -57,4 +58,4 @@
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
- 
+ </div>
