--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,34 +4,34 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-chart">
-                    <div class="card-header card-header-success">
+                    <div class="card-header card-header-danger">
                         <div class="ct-chart" id="dailySalesChart"></div>
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">Technicians</h4>
                         <p class="card-category">
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <div class="stats">
-                            <i class="material-icons">access_time</i> updated 4 minutes ago
+                            <i class="material-icons"></i> 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card card-chart">
-                    <div class="card-header card-header-warning">
+                    <div class="card-header card-header-danger">
                         <div class="ct-chart" id="websiteViewsChart"></div>
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">Quality Check Users</h4>
                         <p class="card-category"></p>
                     </div>
-                    <div class="card-footer">
+                     <!-- <div class="card-footer">
                         <div class="stats">
-                            <i class="material-icons">access_time</i> campaign sent 2 days ago
-                        </div>
-                    </div>
+                            <i class="material-icons"></i> 
+                        </div> 
+                    </div>  -->
                 </div>
             </div>
             <div class="col-md-4">
@@ -39,14 +39,14 @@
                     <div class="card-header card-header-danger">
                         <div class="ct-chart" id="completedTasksChart"></div>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="background-color: #0e7bb9; color: white;">
                         <h4 class="card-title">Admin</h4>
                         <p class="card-category"></p>
                     </div>
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <div class="stats">
-                            <i class="material-icons">access_time</i> campaign sent 2 days ago
-                        </div>
+                            <i class="material-icons"></i> 
+                        </div> -->
                     </div>
                 </div>
             </div>
