--- a/src/app/qualityassurance/qualityassurance.component.html
+++ b/src/app/qualityassurance/qualityassurance.component.html
@@ -1,3 +1,4 @@
+<div class="col-lg-12">
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- S.No Column -->
@@ -90,14 +91,17 @@
         <td mat-cell *matCellDef="let element"> {{element.remarks}} </td>
       </ng-container>
 
-      <!-- View Column -->
-    <ng-container matColumnDef="view">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> View </th>
-        <td mat-cell *matCellDef="let element"> {{element.view}} </td>
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="blue" [routerLink]="['/qualitycheck']">
+              <mat-icon>visibility</mat-icon>
+          </button></td>
       </ng-container>
   
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
+</div>
 
