--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -44,8 +44,11 @@
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ACTION </th>
-      <td mat-cell *matCellDef="let element"> {{element.action}} </td>
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="blue" [routerLink]="['/accounthistory']">
+            <mat-icon>visibility</mat-icon>
+        </button></td>
     </ng-container>
 
    
