--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -12,7 +12,7 @@
   <table
     mat-table
     matSort
-    [dataSource]="dataSourceOne"
+    [dataSource]="dataSourceOne"cx 
     #TableOneSort="matSort"
     class="mat-elevation-z8"
     style="width: 100%;"
@@ -55,6 +55,62 @@
     [pageSizeOptions]="[5, 10, 25, 100]"
   ></mat-paginator>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
