--- a/src/app/qualitycheck/qualitycheck.component.html
+++ b/src/app/qualitycheck/qualitycheck.component.html
@@ -1,14 +1,14 @@
+
  <html>
     <head>
     <title>Account History</title>
-    
     </head>
      
-    <body>
+    
      
     <div class="row">
         <div class="col-md-6">
-     <table> 
+ <table> 
     <tr>
     <td>Account Details</td>
     <td><input type="text"  maxlength="30" />
@@ -85,8 +85,9 @@
                     <td><input type="text"  maxlength="30"></td>
                     </tr>
     </table>
-    </div>
-    </div>  
-     
+</div>
+</div>
+</html>  
+    
 
 
