--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,9 +4,6 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="dailySalesChart"></div>
-                    </div>
                     <div class="card-body">
                         <h4 class="card-title">Technicians</h4>
                         <p class="card-category">
@@ -20,9 +17,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="websiteViewsChart"></div>
-                    </div>
+                   
                     <div class="card-body">
                         <h4 class="card-title">Quality Check Users</h4>
                         <p class="card-category"></p>
@@ -36,9 +31,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="completedTasksChart"></div>
-                    </div>
+                    
                     <div class="card-body" style="background-color: #0e7bb9; color: white;">
                         <h4 class="card-title">Admin</h4>
                         <p class="card-category"></p>
@@ -52,3 +45,11 @@
             </div>
         </div>
         
+        <div style="display: block">
+            <canvas baseChart
+                    [data]="pieChartData"
+                    [labels]="pieChartLabels"
+                    [chartType]="pieChartType"
+                    (chartHover)="chartHovered($event)"
+                    (chartClick)="chartClicked($event)"></canvas>
+          </div>
