--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -1,3 +1,6 @@
+<div fxLayout="row" fxLayoutAlign="center center" >
+
+
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- S.No Column -->
@@ -56,5 +59,5 @@
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
+</div>
 
