--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header card-header-danger">
+                    <div class="card-header">
                         <h4 class="card-title">User Creation</h4>
                         <p class="card-category"></p>
                     </div>
