--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,67 +1,31 @@
-<h1>Auto Sync!</h1>
-<div class="container">
-<form class="form" #logForm="ngForm" (ngSubmit)="onSubmit()">
-   <div class="form-group">
-         <label for="username"> Username :</label>
-         <input type="text" id="username" class="form-control" ([ngClass]) ="username" maxlength="8" size="20">
-     <div class="form-group">
-          <label for ="password">Password :</label>
-          <input type="text" id="password" class="form-control" ([ngClass])="username">
-     </div>
-  </div> 
-    <button type="submit" #submitBtn class="blue">Login</button>
-    <button class="button newuser" (click)="newUser()">New User</button>
-</form>
-</div> 
-  
+
+<div>
+<div class="container login-container">
+            <div class="row">
+                <div class="col-md-6 login-form-1">
+                  
+                    
+                </div>
+                <div class="col-md-6 login-form-2">
+                    <h3>Login for Form 2</h3>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" class="btnSubmit" value="Login" />
+                        </div>
+                        <div class="form-group">
+
+                            <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+</div>  
 
    
-
-
-   <!-- <mat-card>
-    <mat-card-title>Login</mat-card-title>
-  <mat-card-content>
-<form [formGroup]="form" (ngSubmit)="submit()">
-  <p>
-    <mat-form-field>
-      <input type="text" matInput placeholder="Username" formControlName="username">
-    </mat-form-field>
-  </p>
-
-  <p>
-    <mat-form-field>
-      <input type="password" matInput placeholder="Password" formControlName="password">
-    </mat-form-field>
-  </p>
-
-  <p *ngIf="error" class="error">
-    {{ error }}
-  </p>
-
-  <div class="button">
-    <button type="submit" mat-button>Login</button>
-  </div>
-
-</form>
-</mat-card-content>
-</mat-card> -->
-
-<!-- <mat-card class="example-card">
-<mat-card-header>
-  <div mat-card-avatar class="example-header-image"></div>
-  <mat-card-title>Shiba Inu</mat-card-title>
-  <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-</mat-card-header>
-<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-<mat-card-content>
-  <p>
-    The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-    A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-    bred for hunting.
-  </p>
-</mat-card-content>
-<mat-card-actions>
-  <button mat-button>LIKE</button>
-  <button mat-button>SHARE</button>
-</mat-card-actions>
-</mat-card> -->
