--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,9 @@
 .card-body{
     background-color: #0e7bb9;
      color: white;
+     padding-top: 50px;
 }
-
-/* .card-headecard-header card-header-dangerr{
-    background-color: lightcoral;
-} */
+.nivetha{
+    width: 50%;
+    height: 50%
+}
