--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,11 +3,11 @@
 <div class="container login-container">
             <div class="row">
                 <div class="col-md-6 login-form-1">
-                  
+                    <img src="../../assets/img/cover1.jpeg">
                     
                 </div>
                 <div class="col-md-6 login-form-2">
-                    <h3>Login for Form 2</h3>
+                    <h3>Auto Sync Login </h3>
                     <form>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Your Email *" value="" />
@@ -16,16 +16,14 @@
                             <input type="password" class="form-control" placeholder="Your Password *" value="" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Login" />
+                            <input type="submit" class="btnSubmit" value="Login" [routerLink]="['/dashboard']" />
                         </div>
-                        <div class="form-group">
-
-                            <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
-                        </div>
+                        
                     </form>
                 </div>
             </div>
         </div>
 </div>  
+<router-outlet></router-outlet>
 
    
