--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,8 @@
             <div class="col-md-4">
                 <div class="card card-chart">
                     <div class="card-body">
-                        <h4 class="card-title">Technicians</h4>
+                        <h4 class="card-title">Technicians :
+                         54</h4>
                         <p class="card-category">
                     </div>
                     <!-- <div class="card-footer">
@@ -17,7 +18,6 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-chart">
-                   
                     <div class="card-body">
                         <h4 class="card-title">Quality Check Users</h4>
                         <p class="card-category"></p>
@@ -45,11 +45,12 @@
             </div>
         </div>
         
-        <div style="display: block">
+        <div class="nivetha">
             <canvas baseChart
                     [data]="pieChartData"
                     [labels]="pieChartLabels"
                     [chartType]="pieChartType"
                     (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></canvas>
+                    (chartClick)="chartClicked($event)">
+                </canvas>
           </div>
