--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,14 @@
   padding: 5%;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
+ .btnSubmit{
+  margin-left: 75px;
+ }
  
+.example-header-image {
+  background-image: img src="assets/img/angular-logo.png";
+  background-size: cover;
+}
 .login-form-2{
   padding: 5%;
   background: #0062cc;
@@ -46,4 +53,8 @@
   color: #0062cc;
   font-weight: 600;
   text-decoration: none;
+}
+
+.form-control{
+  color: white ;
 }
