--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,6 +1,6 @@
-
-
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+ 
+  
 
     <!-- S.No Column -->
     <ng-container matColumnDef="sno">
@@ -73,5 +73,9 @@
   
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
+</table>
+        <mat-paginator
+        #TableOnePaginator="matPaginator"
+        [pageSize]="3"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+      ></mat-paginator>
