--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,60 +1,42 @@
-.login-container{
-  margin-top: 5%;
-  margin-bottom: 5%;
+.form-control{
+  color: white ;
 }
-.login-form-1{
-  padding: 5%;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-}
- .btnSubmit{
-  margin-left: 75px;
- }
- 
-.example-header-image {
-  background-image: img src="assets/img/angular-logo.png";
+
+.bg-img {
+  background-image: url("../../assets/img/cover1.jpeg");
+  min-height: 380px;
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  height: 100%;
 }
+
 .login-form-2{
-  padding: 5%;
+  margin-top: 10%;
+  margin-right: 2%;
+  padding: 3% 3% 0% 3%;
   background: #0062cc;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 11px 10px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 8px rgba(0, 0, 0, 0.19);
+  opacity: 0.98;
+  border-radius: 30px;
 }
 .login-form-2 h3{
   text-align: center;
   color: #fff;
 }
-.login-container form{
-  padding: 10%;
-}
-.btnSubmit
-{
-  width: 50%;
-  border-radius: 1rem;
-  padding: 1.5%;
-  border: none;
-  cursor: pointer;
-}
-.login-form-1 .btnSubmit{
-  font-weight: 600;
-  color: #fff;
-  background-color: #0062cc;
-}
 .login-form-2 .btnSubmit{
   font-weight: 600;
   color: #0062cc;
   background-color: #fff;
+  padding: 9px;
+  border-radius: 18px;
 }
 .login-form-2 .ForgetPwd{
   color: #fff;
   font-weight: 600;
   text-decoration: none;
 }
-.login-form-1 .ForgetPwd{
-  color: #0062cc;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-.form-control{
-  color: white ;
+.form-group {
+  margin: 8px 0px 35px!important;
 }
