--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,18 @@
-
-<div>
-<div class="container login-container">
-            <div class="row">
-                <div class="col-md-6 login-form-1">
-                    <img src="../../assets/img/cover1.jpeg">
-                    
-                </div>
-                <div class="col-md-6 login-form-2">
-                    <h3>Auto Sync Login </h3>
-                    <form>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Email *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Your Password *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Login" [routerLink]="['/dashboard']" />
-                        </div>
-                        
-                    </form>
-                </div>
+<div class="bg-img">
+    <div class="col-md-4 login-form-2 pull-right">
+        <h3>Auto Sync Login </h3>
+        <form>
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Email *" value="" />
             </div>
-        </div>
-</div>  
-<router-outlet></router-outlet>
-
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="Your Password *" value="" />
+            </div>
+            <div class="form-group d-flex justify-content-center">
+                <input type="submit" class="btnSubmit" value="Login" [routerLink]="['/dashboard']" />
+            </div>
+            
+        </form>
+    </div>
+</div>
    
