--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<div class="container col-md-12"> 
 <div class="main-content">
     <div class="container-fluid">
        
@@ -45,7 +46,7 @@
             </div>
         </div>
         
-        <div class="nivetha">
+        <div class="chart">
             <canvas baseChart
                     [data]="pieChartData"
                     [labels]="pieChartLabels"
@@ -54,3 +55,4 @@
                     (chartClick)="chartClicked($event)">
                 </canvas>
           </div>
+</div>
