--- a/src/app/dash-overview/dash-overview.component.css
+++ b/src/app/dash-overview/dash-overview.component.css
@@ -1,5 +1,20 @@
-
-  table {
-    width: 150%;
-    margin: 5%;
+table {
+    width: 100%;
+    margin-left:2%;
   }
+
+  .example-label{
+    margin-top: 90px;
+    padding-left: 20px;
+    margin-left: 4%;
+    color: #0d7bb9;
+  }
+
+   .mat-header-row{
+    background-color: #0d7bb9;
+    color: white;
+  }
+  .col-md-12{
+    margin-top: 5%;
+  }
+  
