--- a/src/app/dash-overview/dash-overview.component.html
+++ b/src/app/dash-overview/dash-overview.component.html
@@ -1,55 +1,75 @@
- <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+<div class="example-label">
+    <button mat-raised-button [routerLink]="['/usercreation']">Create User</button>
+</div>
+
+<table mat-table [dataSource]="dataSource" matSort class="col-md-12">
 
     <!-- S.No Column -->
-    <ng-container matColumnDef="sno">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-      <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
-    </ng-container>
+        <ng-container matColumnDef="sno">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
+          <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
+        </ng-container>
   
     <!-- User Name Column -->
-     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-      <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-    </ng-container> 
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container> 
   
     <!-- Password Column -->
-     <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
-      <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-    </ng-container>
+        <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
+          <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+        </ng-container>
   
      <!-- Job Id Column -->
-     <ng-container matColumnDef="jobid">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Job ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.jobid}} </td>
-      </ng-container>
+          <ng-container matColumnDef="jobid">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Job ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.jobid}} </td>
+            </ng-container>
 
        <!-- supervisor Column -->
-      <ng-container matColumnDef="supervisor">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
-        <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
-      </ng-container> 
+          <ng-container matColumnDef="supervisor">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
+            <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
+          </ng-container> 
    
        <!-- folderpath Column -->
-     <ng-container matColumnDef="folderpath">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> FolderPath</th>
-        <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
-      </ng-container>
+          <ng-container matColumnDef="folderpath">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> FolderPath</th>
+              <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
+            </ng-container>
 
        <!-- Device ID Column -->
-     <ng-container matColumnDef="deviceid">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Device ID </th>
-        <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
-      </ng-container>
+          <ng-container matColumnDef="deviceid">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Device ID </th>
+              <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
+            </ng-container>
 
        <!-- Action ID Column -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action </th>
-        <td mat-cell *matCellDef="let element"> {{element.action}} </td>
-      </ng-container>
-      
-  
-     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
- 
+              <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef>Action</th>
+                         <td mat-cell *matCellDef="let element">
+                                    <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                        <mat-icon>visibility</mat-icon>
+                                    </button>
+                               <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                      <mat-icon>edit</mat-icon>
+                               </button>
+                                <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                    <mat-icon>delete</mat-icon>
+                                </button>
+                                <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                  <mat-icon>person</mat-icon>
+                                </button>
+                           </td>
+            </ng-container>
+          
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator
+#TableOnePaginator="matPaginator"
+[pageSize]="10"
+[pageSizeOptions]="[5, 10, 25, 100]"
+></mat-paginator>
