--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
     <a href class="simple-text">
         <div class="logo-img">
-            
+          <img src="/assets/img/angular2-logo-red.png"/>  
         </div>
-        Ressinance
+        AutoSync
     </a>
 </div>
 <div class="sidebar-wrapper">
@@ -13,7 +13,7 @@
         <div class="input-group no-border">
           <input type="text" value="" class="form-control" placeholder="Search...">
           <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
-            <i class="material-icons">search</i>
+            
             <div class="ripple-container"></div>
           </button>
         </div>
@@ -26,18 +26,19 @@
             <a class="nav-link" href="javascript:void(0)">
                 <i class="material-icons">person</i>
                 <p>
-                    <span class="d-lg-none d-md-block">Account</span>
+                    <!-- <span class="d-lg-none d-md-block">Account</span> -->
                 </p>
             </a>
         </li>
     </ul>
   </div>
     <ul class="nav">
-        <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
+        <li routerLinkActive="active"  *ngFor="let menuItem of menuItems" class="{{menuItem.class}} nav-item">
             <a class="nav-link" [routerLink]="[menuItem.path]">
                 <i class="material-icons">{{menuItem.icon}}</i>
                 <p>{{menuItem.title}}</p>
             </a>
         </li>
     </ul>
+    
 </div>
