--- a/src/app/transferstatus/transferstatus.component.css
+++ b/src/app/transferstatus/transferstatus.component.css
@@ -1,4 +1,13 @@
 table {
-    width: 100%;
-    margin: 5%;
-  }
+  width: 100%;
+  margin-left:2%;
+}
+
+.mat-elevation-z8{
+  margin-top:14%;
+
+}
+
+.mat-header-row{
+  background-color: #0d7bb9;
+}
