--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,5 +1,5 @@
+<div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
     <!-- S.No Column -->
     <ng-container matColumnDef="sno">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
@@ -62,11 +62,21 @@
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-      <td mat-cell *matCellDef="let element"> {{element.action}} </td>
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="blue" [routerLink]="['/imagestatus']">
+            <mat-icon>visibility</mat-icon>
+        </button></td>
     </ng-container>
   
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+</table>
+        <mat-paginator
+        #TableOnePaginator="matPaginator"
+        [pageSize]="10"
+        [pageSizeOptions]="[5, 10, 25, 100]"
+      ></mat-paginator>
+ 
 
+</div>
