--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -3,17 +3,21 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Edit Profile</h4>
-                        <p class="card-category">Complete your profile</p>
+                    <div class="card-header">
+                        <h4 class="card-title">User Creation</h4>
+                        <p class="card-category"></p>
                     </div>
                     <div class="card-body">
                         <form>
                             <div class="row">
-                                
+                              <div class="col-md-5">
+                                <mat-form-field class="example-full-width">
+                                  <input matInput placeholder="User role">
+                                </mat-form-field>
+                              </div>
                                 <div class="col-md-3">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Username">
+                                      <input matInput placeholder="User name">
                                     </mat-form-field>
                                 </div>
                                 
@@ -44,24 +48,20 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
-                                    <mat-form-field appearance="fill">
-                                        <mat-label>Supervisor</mat-label>
-                                        <mat-select [formControl]="supervisor" multiple>
-                                          <mat-select-trigger>
-                                            {{supervisor.value ? supervisor.value[0] : ''}}
-                                            <span *ngIf="supervisor.value?.length > 1" class="example-additional-selection">
-                                              (+{{supervisor.value.length - 1}} {{supervisor.value?.length === 2 ? 'other' : 'others'}})
-                                            </span>
-                                          </mat-select-trigger>
-                                          <mat-option *ngFor="let topping of supervisorList" [value]="supervisor">{{supervisor}}</mat-option>
-                                        </mat-select>
-                                      </mat-form-field>
+                                  <mat-form-field appearance="fill">
+                                    <mat-label>Supervisor</mat-label>
+                                    <mat-select [(ngModel)]="selectedValue" name="supervisor">
+                                      <mat-option *ngFor="let supervisor of supervisor" [value]="supervisor.value">
+                                        {{supervisor.viewValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
                                 </div>
-                                <div class="col-md-4">
+                                <!-- <div class="col-md-4">
                                   <mat-form-field class="example-full-width">
                                     <input matInput placeholder="User role" type="text">
                                   </mat-form-field>
-                                </div>
+                                </div> -->
                                 <div class="col-md-4">
                                   <mat-form-field class="example-full-width">
                                     <input matInput placeholder="AutoSyncDay" type="text">
