--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -148,7 +148,7 @@
             & .dropdown-menu a:focus,
             &.active > [data-toggle="collapse"]{
                 background-color: rgba(200, 200, 200, 0.2);
-                color: $black-color;
+                color: $white-color;
                 box-shadow: none;
             }
 
@@ -206,7 +206,7 @@
     .nav li .dropdown-menu a{
           margin: 10px 15px 0;
           border-radius: $border-radius-base;
-          color: $black-color;
+          color: white;
           padding-left: 10px;
           padding-right: 10px;
           text-transform: capitalize;
@@ -265,7 +265,7 @@
         }
 
         .simple-text{
-            text-transform: uppercase;
+            text-transform: Titlecase;
             padding: $padding-small-vertical $padding-zero;
             display: inline-block;
             font-size: 18px;
@@ -372,7 +372,8 @@
     position: relative;
     float: right;
     width: $sidebar-width;
-    @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+    background-color: white;
+    //@include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
      .main-content{
         margin-top: 70px;
