--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,48 +1,78 @@
-<!-- <div class="container col-md-12">  -->
+<!-- <div class="container col-md-12">  -->   
 <div class="main-content">
     <div class="container-fluid">
+        <div class="row"><div class="col-lg-6"></div>
+        <div class="col-lg-3">          
+            <mat-form-field appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field></div>
+        <div class="col-lg-3"> <div class="navbar-collapse justify-content-end" id="navigation">
+            <form class="navbar-form">
+                <div class="input-group no-border form-bg-color">
+                    <input style="height:52px; padding-left:10px" type="text" value="" class="form-control" placeholder="Search...">
+                    <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
+                        <i class="material-icons">search</i>
+                        <div class="ripple-container"></div>
+                    </button>
+                </div>
+            </form>        
+        </div></div>
+    </div>       
         <div class="row">
-            <div class="col-md-4">
-                <div class="card card-chart">
-                    <div class="card-header card-header-warning card-header-icon"></div>
-                    <div class="card-body">
-                        <h4 class="card-title">Technicians 
-                    </h4>
-                        <p class="card-category">
-                    </div>
-                    <!-- <div class="card-footer">
-                        <div class="stats">
-                            <i class="material-icons"></i> 
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-header card-header card-header-icon ">
+                        <div class="card-icon lightcoral">
+                            <i class="material-icons">people_outline</i>
                         </div>
-                    </div> -->
+                        <p class="card-category">Technicians</p>
+                        <h3 class="card-title">1540
+                           
+                        </h3>
+                    </div>
+                    <div class="card-footer">
+                        <div class="stats">
+                            <i class="material-icons">local_offer</i> Hint goes here
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card card-chart">
-                    <div class="card-body">
-                        <h4 class="card-title">Quality Check Users</h4>
-                        <p class="card-category"></p>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-header card-header card-header-icon">
+                        <div class="card-icon lightcoral">
+                            <i class="material-icons">store</i>
+                        </div>
+                        <p class="card-category">Quality Check Users</p>
+                        <h3 class="card-title">245</h3>
                     </div>
-                     <!-- <div class="card-footer">
+                    <div class="card-footer">
                         <div class="stats">
-                            <i class="material-icons"></i> 
-                        </div> 
-                    </div>  -->
+                            <i class="material-icons">info</i> Hint goes here
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card card-chart">
-                    
-                    <div class="card-body" style="background-color: #0e7bb9; color: white;">
-                        <h4 class="card-title">Admin</h4>
-                        <p class="card-category"></p>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="card card-stats">
+                    <div class="card-header card-header card-header-icon">
+                        <div class="card-icon lightcoral">
+                            <i class="material-icons">people</i>
+                        </div>
+                        <p class="card-category">Admins</p>
+                        <h3 class="card-title">3</h3>
                     </div>
-                    <!-- <div class="card-footer">
+                    <div class="card-footer">
                         <div class="stats">
-                            <i class="material-icons"></i> 
-                        </div> -->
+                            <i class="material-icons">local_offer</i> Hint goes here
+                        </div>
                     </div>
                 </div>
+            </div>
+         
             </div>
         </div>
         
