--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -1,7 +1,10 @@
-<div class="col-lg-12">
+<div class="main-content">
+  <div class="container-fluid">
+
+
   
 
-<div style="padding:5%">
+<div class="row">
   <mat-form-field>
     <input
       matInput
@@ -21,25 +24,25 @@
 
     <!-- sno Column -->
     <ng-container matColumnDef="sno">
-      <th mat-header-cell *matHeaderCellDef>S.No</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
       <td mat-cell *matCellDef="let element">{{ element.sno }}</td>
     </ng-container>
 
     <!-- filename Column -->
     <ng-container matColumnDef="filename">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>FileName</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>FileName</th>
       <td mat-cell *matCellDef="let element">{{ element.filename}}</td>
     </ng-container>
 
     <!-- size Column -->
     <ng-container matColumnDef="size">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
       <td mat-cell *matCellDef="let element">{{ element.size }}</td>
     </ng-container>
 
     <!-- status Column -->
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
       <td mat-cell *matCellDef="let element">{{ element.status }}</td>
     </ng-container>
 
@@ -48,12 +51,12 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumnsOne"></tr>
   </table>
 
-  <mat-paginator
-    #TableOnePaginator="matPaginator"
-    [pageSize]="3"
-    [pageSizeOptions]="[5, 10, 25, 100]"
-  ></mat-paginator>
-  </div>
+  
+  </div><mat-paginator
+  #TableOnePaginator="matPaginator"
+  [pageSize]="3"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+></mat-paginator></div></div>
 
 
 
