--- a/src/app/transferstatus/transferstatus.component.css
+++ b/src/app/transferstatus/transferstatus.component.css
@@ -1,13 +1,35 @@
 table {
   width: 100%;
-  margin-left:2%;
+  
 }
 
 .mat-elevation-z8{
-  margin-top:14%;
+  margin-top:2%;
 
 }
-
+.row{
+  margin: 0;
+}
 .mat-header-row{
   background-color: #0d7bb9;
+}
+.form-bg-color
+{
+    background-color:#e5e5e5;
+}
+
+.align-right
+{
+  text-align: right;
+}
+.tab-head {
+
+  color: white;
+  font-weight: normal;
+  font-size: 14px;
+ 
+}
+.zero-padding-right
+{
+  padding-right:0;
 }
