--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,68 +1,91 @@
-<div>
+<div class="main-content">
+  <div class="container-fluid">
+      <div class="row"><div class="col-lg-6"></div>
+      <div class="col-lg-3">          
+          <mat-form-field appearance="fill">
+              <mat-label>Choose a date</mat-label>
+              <input matInput [matDatepicker]="picker">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field></div>
+      <div class="col-lg-3 zero-padding-right"> <div class="navbar-collapse justify-content-end" id="navigation">
+          <form class="navbar-form">
+              <div class="input-group no-border form-bg-color">
+                  <input style="height:52px; padding-left:10px" type="text" value="" class="form-control" placeholder="Search...">
+                  <button mat-raised-button type="submit" class="btn btn-white btn-round btn-just-icon">
+                      <i class="material-icons">search</i>
+                      <div class="ripple-container"></div>
+                  </button>
+              </div>
+          </form>        
+      </div></div>
+  </div>       
+
+<div class="row">
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <!-- S.No Column -->
     <ng-container matColumnDef="sno">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
       <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
     </ng-container>
   
     <!-- Transfer ID Column -->
      <ng-container matColumnDef="transferid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Transfer ID </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Transfer ID </th>
       <td mat-cell *matCellDef="let element"> {{element.transferid}} </td>
     </ng-container> 
   
     <!-- User ID Column -->
      <ng-container matColumnDef="userid">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User ID </th>
       <td mat-cell *matCellDef="let element"> {{element.userid}} </td>
     </ng-container>
   
      <!-- Supervisor Column -->
     <ng-container matColumnDef="supervisor">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
       <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
     </ng-container> 
 
     <!-- Size Column -->
     <ng-container matColumnDef="size">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Size </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Size </th>
       <td mat-cell *matCellDef="let element"> {{element.size}} </td>
     </ng-container>
 
     <!-- Folder Name Column -->
     <ng-container matColumnDef="foldername">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Folder Name </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Folder Name </th>
       <td mat-cell *matCellDef="let element"> {{element.foldername}} </td>
     </ng-container>
 
     <!-- Photo Column -->
     <ng-container matColumnDef="photo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
       <td mat-cell *matCellDef="let element"> {{element.photo}} </td>
     </ng-container>
 
     <!-- Reads Column -->
     <ng-container matColumnDef="reads">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Reads</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Reads</th>
       <td mat-cell *matCellDef="let element"> {{element.reads}} </td>
     </ng-container>
 
     <!-- Bills Column -->
     <ng-container matColumnDef="bills">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Bills </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Bills </th>
       <td mat-cell *matCellDef="let element"> {{element.bills}} </td>
     </ng-container>
 
     <!-- Overall Status Column -->
     <ng-container matColumnDef="overallstatus">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Overall status </th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Overall status </th>
       <td mat-cell *matCellDef="let element"> {{element.overallstatus}} </td>
     </ng-container>
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
         <button mat-icon-button color="blue" [routerLink]="['/imagestatus']">
             <mat-icon>visibility</mat-icon>
@@ -72,11 +95,14 @@
      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-        <mat-paginator
-        #TableOnePaginator="matPaginator"
-        [pageSize]="10"
-        [pageSizeOptions]="[5, 10, 25, 100]"
-      ></mat-paginator>
+      
  
 
 </div>
+<mat-paginator
+#TableOnePaginator="matPaginator"
+[pageSize]="10"
+[pageSizeOptions]="[5, 10, 25, 100]"
+></mat-paginator>
+  </div></div>
+ 
