--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8">
+          
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title">User Creation</h4>
@@ -69,15 +69,12 @@
                                 </div>
                             </div>
                             
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Save</button>
+                            <button  mat-raised-button type="submit" class="btn btn-action pull-right">Save</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
-            </div>
-            
-                
-            
+           
         </div>
     </div>
   </div>
