Login validation, Services

--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="main-content page-container">
   <div class="container-fluid">
       <div class="row"><div class="col-lg-6"></div>
       <div class="col-lg-3">          
@@ -104,5 +104,6 @@
 [pageSize]="10"
 [pageSizeOptions]="[5, 10, 25, 100]"
 ></mat-paginator>
-  </div></div>
+  </div>
+</div>
  
