--- a/src/app/dash-overview/dash-overview.component.html
+++ b/src/app/dash-overview/dash-overview.component.html
@@ -1,80 +1,83 @@
-<div class="main-content">
+<div class="main-content page-container">
   <div class="container-fluid">
-<div class="row">
-  <div class="col-md-10"></div><div class="col-md-2 zero-padding-right align-right" >
-    <button class="btn-action" mat-raised-button [routerLink]="['/usercreation']">Create User</button></div>
-</div>
-<div class="row">
+    <div class="row">
+      <div class="col-md-10"></div>
+      <div class="col-md-2 zero-padding-right align-right" >
+        <button class="btn-action" mat-raised-button [routerLink]="['/usercreation']">Create User</button>
+      </div>
+    </div>
+    <div class="row">
+      <table mat-table [dataSource]="dataSource" matSort class="col-md-12">
 
-<table mat-table [dataSource]="dataSource" matSort class="col-md-12">
+          <!-- S.No Column -->
+              <ng-container matColumnDef="sno">
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
+                <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
+              </ng-container>
+        
+          <!-- User Name Column -->
+              <ng-container matColumnDef="username">
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+                <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+              </ng-container> 
+        
+          <!-- Password Column -->
+              <ng-container matColumnDef="password">
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
+                <td mat-cell *matCellDef="let element"> {{element.password}} </td>
+              </ng-container>
+        
+          <!-- Job Id Column -->
+                <ng-container matColumnDef="jobid">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job ID </th>
+                    <td mat-cell *matCellDef="let element"> {{element.jobid}} </td>
+                  </ng-container>
 
-    <!-- S.No Column -->
-        <ng-container matColumnDef="sno">
-          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>S No </th>
-          <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
-        </ng-container>
-  
-    <!-- User Name Column -->
-        <ng-container matColumnDef="username">
-          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
-          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-        </ng-container> 
-  
-    <!-- Password Column -->
-        <ng-container matColumnDef="password">
-          <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
-          <td mat-cell *matCellDef="let element"> {{element.password}} </td>
-        </ng-container>
-  
-     <!-- Job Id Column -->
-          <ng-container matColumnDef="jobid">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.jobid}} </td>
-            </ng-container>
+            <!-- supervisor Column -->
+                <ng-container matColumnDef="supervisor">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
+                  <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
+                </ng-container> 
+        
+            <!-- folderpath Column -->
+                <ng-container matColumnDef="folderpath">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> FolderPath</th>
+                    <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
+                  </ng-container>
 
-       <!-- supervisor Column -->
-          <ng-container matColumnDef="supervisor">
-            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
-            <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
-          </ng-container> 
-   
-       <!-- folderpath Column -->
-          <ng-container matColumnDef="folderpath">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> FolderPath</th>
-              <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
-            </ng-container>
+            <!-- Device ID Column -->
+                <ng-container matColumnDef="deviceid">
+                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device ID </th>
+                    <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
+                  </ng-container>
 
-       <!-- Device ID Column -->
-          <ng-container matColumnDef="deviceid">
-              <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
-            </ng-container>
-
-       <!-- Action ID Column -->
-              <ng-container matColumnDef="action">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
-                         <td mat-cell *matCellDef="let element">
+            <!-- Action ID Column -->
+                    <ng-container matColumnDef="action">
+                          <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
+                              <td mat-cell *matCellDef="let element">
+                                          <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                              <mat-icon>visibility</mat-icon>
+                                          </button>
                                     <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                        <mat-icon>visibility</mat-icon>
+                                            <mat-icon>edit</mat-icon>
                                     </button>
-                               <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                      <mat-icon>edit</mat-icon>
-                               </button>
-                                <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                                <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
-                                  <mat-icon>person</mat-icon>
-                                </button>
-                           </td>
-            </ng-container>
-          
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-
-</div><mat-paginator
-#TableOnePaginator="matPaginator"
-[pageSize]="10"
-[pageSizeOptions]="[5, 10, 25, 100]"
-></mat-paginator></div></div>
+                                      <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                          <mat-icon>delete</mat-icon>
+                                      </button>
+                                      <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                        <mat-icon>person</mat-icon>
+                                      </button>
+                                </td>
+                  </ng-container>
+                
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator
+      #TableOnePaginator="matPaginator"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      ></mat-paginator>
+  </div>
+</div>
