--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<!-- <div class="container col-md-12">  -->   
-<div class="main-content">
+<div class="main-content page-container">
     <div class="container-fluid">
         <div class="row"><div class="col-lg-6"></div>
         <div class="col-lg-3">          
