--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,17 +1,11 @@
-.email{
-  color: white ;
-}
-
-.password{
+input{
   color: white ;
 }
 .btn-action
 {
   background-color: lightcoral;
-    color: white;
-    font-weight: normal;
+  font-weight: normal;
 }
-
 .bg-img {
   background-image: url("../../assets/img/cover1.jpeg");
   min-height: 380px;
@@ -21,11 +15,8 @@
   position: relative;
   height: 100%;
 }
-
 .login-form-2{
-     /* margin-top: 10%; */
-    /* margin-right: 2%; */
-    padding: 3%;
+    padding: 3% 3% 1% 3%;
     background: #0e7bb9;
     box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 8px rgba(0, 0, 0, 0.19);
     opacity: 0.98;
@@ -47,21 +38,18 @@
   padding: 9px;
   border-radius: 18px;
 }
-
 .form-group {
   margin: 8px 0px 35px!important;
-}
-.invalid-feedback{
-  color: indianred;
-}
-.example-container {
-  background-color: aliceblue;
 }
 .align-right
 {
   text-align: right;
 }
-
-.form-input-bg {
-  background-color: white !important;
+.input-field{
+  margin-bottom: 20px;
+}
+.error{
+  font-size: 13px;
+  font-weight: bold;
+  font-family: 'Roboto';
 }
