--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,24 @@
 <div class="bg-img">
     <div class="col-md-4 login-form-2 ">
         <h3>Auto Sync</h3>
-        <form>
-            <div >
-                <mat-form-field appearance="fill">
+        <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" novalidate>
+            <div> 
+                <mat-form-field appearance="fill" class="input-field">
                   <mat-label>Email</mat-label>
-                  <input matInput  placeholder="user@login.com" [formControl]="email" required>
-                  <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                  <input matInput [formControl]="email"  placeholder="User Name"  required>
+                  <mat-error class="error" *ngIf="email.invalid && email.dirty">Enter Valid EmailId</mat-error>
                 </mat-form-field>
               </div>
               <div >
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="input-field">
                   <mat-label>Password</mat-label>
-                  <input matInput placeholder="" [formControl]="password" required>
-                  <mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>
+                  <input matInput type="password" [formControl]="password" placeholder="Password"  required>
+                  <mat-error class="error" *ngIf="password.invalid && password.dirty">Enter Password</mat-error>
                 </mat-form-field>
               </div>
               <div class="align-right" >
-               
-                <input type="submit" class="btn btn-action" value="Login" routerLink="/dashboard" />
+                <span class="col-md-8 error" *ngIf="!isValid">Enter UserName and Password</span>
+                <input type="submit" class="btn btn-action col-md-4" value="Login" />
             </div> 
         </form> 
     </div> 
