--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: whitesmoke !important;
 }
 
-.container{
+.page-container{
     height: 650px;
     background: white;
     margin-left: 13px;
     margin-top: 68px;
     width: 98% !important;
     box-shadow: 0 11px 10px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 8px rgba(0, 0, 0, 0.19);
+}
+.main-panel .main-content {
+    padding: 10px 15px !important;
 }
