--- a/src/app/dash-overview/dash-overview.component.css
+++ b/src/app/dash-overview/dash-overview.component.css
@@ -33,7 +33,7 @@ table {
 }
 .btn-action
 {
-  background-color: lightcoral;
+  background-color:#0d7bb9;
     color: white;
     font-weight: normal;
 }
