--- a/src/app/usercreation/usercreation.component.css
+++ b/src/app/usercreation/usercreation.component.css
@@ -7,7 +7,7 @@
   } 
   .btn-action
   {
-    background-color: lightcoral !important;
+    background-color:  #0d7bb9 !important;
       color: white;
       font-weight: normal;
   }
