--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -59,7 +59,7 @@
                                           <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                               <mat-icon>visibility</mat-icon>
                                           </button>
-                                    <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
+                                    <!-- <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                             <mat-icon>edit</mat-icon>
                                     </button>
                                       <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
@@ -67,7 +67,7 @@
                                       </button>
                                       <button mat-icon-button color="blue" [routerLink]="['/usercreation']">
                                         <mat-icon>person</mat-icon>
-                                      </button>
+                                      </button> -->
                                 </td>
                   </ng-container>
                 
