--- a/src/app/usercreation/usercreation.component.css
+++ b/src/app/usercreation/usercreation.component.css
@@ -15,11 +15,12 @@
     background-color: #0d7bb9;
     margin: 10%;
   }
-
   .card-header{
     background-color: #0d7bb9;
   }
   .row{
     margin: 0;
   }
-  
+  small{
+    color: red;
+  }
