--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -17,39 +17,33 @@
         
           <!-- User Name Column -->
               <ng-container matColumnDef="username">
-                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> User Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.Username}} </td>
               </ng-container> 
         
-          <!-- Password Column -->
-              <ng-container matColumnDef="password">
-                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Password </th>
-                <td mat-cell *matCellDef="let element"> {{element.Password}} </td>
-              </ng-container>
-        
           <!-- Job title Column -->
-                <!-- <ng-container matColumnDef="jobtitle">
-                    <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job Title</th>
-                    <td mat-cell *matCellDef="let element"> {{element.jobtitle}} </td>
-                  </ng-container> -->
+                <ng-container matColumnDef="RoleName">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Job Title</th>
+                  <td mat-cell *matCellDef="let element"> {{element.RoleName}} </td>
+                </ng-container>
 
             <!-- supervisor Column -->
-                <!-- <ng-container matColumnDef="supervisor">
-                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> supervisor </th>
-                  <td mat-cell *matCellDef="let element"> {{element.supervisor}} </td>
-                </ng-container>  -->
+                <ng-container matColumnDef="SupervisorName">
+                  <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Supervisor </th>
+                  <td mat-cell *matCellDef="let element"> {{element.SupervisorName}} </td>
+                </ng-container> 
         
             <!-- folderpath Column -->
-                <!-- <ng-container matColumnDef="folderpath">
+                <ng-container matColumnDef="FolderFilePath">
                     <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> folderpath</th>
-                    <td mat-cell *matCellDef="let element"> {{element.folderpath}} </td>
-                  </ng-container> -->
+                    <td mat-cell *matCellDef="let element"> {{element.FolderFilePath}} </td>
+                </ng-container>
 
             <!-- Device Id Column -->
-                <!-- <ng-container matColumnDef="deviceid">
+                <ng-container matColumnDef="Deviceid">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Device Id</th>
-                  <td mat-cell *matCellDef="let element"> {{element.deviceid}} </td>
-                </ng-container> -->
+                  <td mat-cell *matCellDef="let element"> {{element.Deviceid}} </td>
+                </ng-container>
 
 
             <!-- Action ID Column -->
