--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -12,7 +12,7 @@
                   <div class="col-md-5">
                     <mat-form-field >
                       <mat-label>User Role</mat-label>
-                      <mat-select formControlName="UserRole" name="UserRole">
+                      <mat-select formControlName="RoleId" name="RoleId">
                         <mat-option *ngFor="let role of roleList" [value]="role.Key">
                           {{role.Value}}
                         </mat-option>
@@ -22,7 +22,7 @@
                   </div>
                     <div class="col-md-3">
                         <mat-form-field class="example-full-width">
-                          <input matInput placeholder="User Name" formControlName="UserName">
+                          <input matInput placeholder="User Name" formControlName="Username">
                           <!-- <small [hidden]="userForm.controls.UserName.valid||(userForm.controls.UserName.pristine)">Require a Valid Input</small> -->
                         </mat-form-field>
                     </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="Supervisor">
+                        <input matInput placeholder="Auto Delete Time" type="number" formControlName="AutoSyncTime">
                         <!-- <small [hidden]="userForm.controls.Supervisor.valid||(userForm.controls.Supervisor.pristine)">Require a Valid Input</small> -->
                       </mat-form-field>
                     </div>
@@ -66,7 +66,7 @@
                     <div class="col-md-5">
                       <mat-form-field >
                         <mat-label>Supervisor</mat-label>
-                        <mat-select formControlName="Supervisor" name="supervisor">
+                        <mat-select formControlName="SupervisorId" name="SupervisorId">
                           <mat-option *ngFor="let supervisor of supervisorList" [value]="supervisor.Key">
                             {{supervisor.Value}}
                           </mat-option>
@@ -77,7 +77,7 @@
                     <div class="col-md-6">
                       <mat-form-field >
                         <mat-label>Auto Sync Day</mat-label>
-                        <select matNativeControl formControlName="AutoSyncDay">
+                        <select matNativeControl formControlName="AutoSyncDays">
                           <option value="select">--Select--</option>
                           <option value="Admin">Sunday</option>
                           <option value="SuperAdmin">Monday</option>
