--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -68,7 +68,7 @@
     <!-- Reason Column -->
     <ng-container matColumnDef="Reason">
       <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Reason</th>
-      <td mat-cell *matCellDef="let element"> {{element.Reason} </td>
+      <td mat-cell *matCellDef="let element"> {{element.Reason}} </td>
     </ng-container>
 
     <!-- SyncType Column -->
